modifs page d'accueil et partenaires, logo en plus, réunion en moins

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,14 +58,6 @@
       <iframe width="560" height="349" src="https://www.youtube.com/embed/ySBLAXtdZUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-
-
-    <h2 class="mt-0 text-center">Réunion d’informations pour les structures :</h2>
-    <h2 class="text-center mb-3"><b>Mercredi 19 décembre - 18h30-20h au Buro des possibles</b></h2>
-    <p class="d-flex justify-content-center mb-5">
-      <%= link_to "Je m'inscris", "https://goo.gl/forms/tSh1tvnjiEcB6ttt2", class:"btn btn-primary text-white bold", target: :blank  %>
-    </p>
-
     <hr/>
 
     <div class="newsletter">
@@ -89,6 +81,13 @@
           <%= image_tag "metropole.svg", height: 150 %>
         <% end %>
       </div>
+
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
+        <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+          <%= image_tag "region.png", height: 150 %>
+        <% end %>
+      </div>
+
       <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://www.stop-dechets.fr/territoire-zero-dechets-zero-gaspillage", target: :blank do %>
           <%= image_tag "territoire-ZDZG.svg", height: 150 %>
