--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -67,6 +67,12 @@
             <% end %>
           </div>
           <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
+            <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+              <%= image_tag "region.png", height: 150 %>
+            <% end %>
+          </div>
+
+          <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.stop-dechets.fr/territoire-zero-dechets-zero-gaspillage", target: :blank do %>
               <%= image_tag "territoire-ZDZG.svg", height: 150 %>
             <% end %>
