inversé l'emplacement du texte par rapport à la video

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,16 +46,14 @@
 
     <hr/>
 
-    <div class="row">
-      <div class="col-10 offset-1">
-        <h2 class="green-bg-no-inline text-center mt-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
-      </div>
-    </div>
-
-
-
     <div class="video-wrapper">
       <iframe width="560" height="349" src="https://www.youtube.com/embed/ySBLAXtdZUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="row">
+      <div class="col-10 offset-1">
+        <h2 class="green-bg-no-inline text-center mt-0 mb-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
+      </div>
     </div>
 
     <hr/>
