--- a/app/views/comportamental_formulaires/page_one.html.erb
+++ b/app/views/comportamental_formulaires/page_one.html.erb
@@ -20,8 +20,61 @@ Pour chacune des propositions suivantes, veuillez indiquer dans quelle mesure el
     <span class=""></span>
   </div>
   <h2 class="mt-4 mb-4 green-bg">Généralités</h2>
-  <%= simple_form_for(@formulaire, method: :put, url: wizard_path ) do |f| %>
-    <% f.input :work_sorting_order %>
+
+  <%= simple_form_for(@user_behaviour_diag, method: :put, url: wizard_path) do |f| %>
+    <p class="mt-4"><b>1. </b>Au travail, vous connaissez les consignes de tri des déchets de votre structure ?</p>
+    <%= f.collection_radio_buttons :work_sorting_order, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+    <p class="mt-4"><b>2. </b>Au travail, vous appliquez les consignes de tri des déchets de votre structure. ?</p>
+    <%= f.collection_radio_buttons :work_sorting_applied, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+
+    <p class="mt-4"><b>3. </b>Au travail, vous pratiquez des gestes pour réduire votre production de déchets de fonctionnement ?</p>
+    <%= f.collection_radio_buttons :work_trash_reduction, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+    <%= f.input :work_trash_reduction_comment, class: "hidden-comment"%>
+
+
+    <p class="mt-4"><b>4. </b>Chez vous, vous connaissez les consignes de tri des déchets de votre territoire ?</p>
+    <%= f.collection_radio_buttons :home_sorting_order, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+
+    <p class="mt-4"><b>5. </b>Chez vous, vous appliquez les consignes de tri des déchets de votre territoire ?</p>
+    <%= f.collection_radio_buttons :home_sorting_applied, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+
+    <p class="mt-4"><b>6. </b>Chez vous, vous pratiquez des gestes pour réduire votre production de déchets ?</p>
+    <%= f.collection_radio_buttons :home_trash_reduction, ["Pas du tout", "Un peu", "Moyennement", "Beaucoup",  "Tout à fait", "Non concerné"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+    <%= f.input :home_trash_reduction_comment, class: "hidden-comment"%>
+
+    <div class="d-flex justify-content-end mb-5 mt-4">
+      <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
+    </div>
   <% end %>
 
 </div>
