--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -10,7 +10,7 @@
       <% if current_user.user_behaviour_diag.nil? %>
         <%= link_to "Faire mon formulaire comportemental", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
       <% else %>
-        <%= link_to "Formulaire comportemental", comportamental_formulaire_path(current_user.user_behaviour_diag.step), class:"btn btn-primary bold" %>
+        <%= link_to "Formulaire comportemental", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
       <% end %>
 
       <h2 class="green-bg mt-5">Déchets de fonctionnement de votre structure</h2>
