--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,3 +1,5 @@
+<script src="https://code.highcharts.com/modules/xrange.js"></script>
+
 <div class="wrapper">
   <div class="container">
     <div class="container-soutenir">
@@ -8,3 +10,63 @@
     </div>
   </div>
 </div>
+
+<div id='testchart'></div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    Highcharts.chart('testchart', {
+        chart: {
+            type: 'xrange',
+            styledMode: true
+        },
+        title: {
+            text: 'Highcharts X-range'
+        },
+        xAxis: {
+            type: 'datetime'
+        },
+        yAxis: {
+            title: {
+                text: ''
+            },
+            categories: ['Prototyping', 'Development', 'Testing'],
+            reversed: true
+        },
+        series: [{
+            name: 'Project 1',
+            // pointPadding: 0,
+            // groupPadding: 0,
+            pointWidth: 20,
+            data: [{
+                x: Date.UTC(2014, 10, 21),
+                x2: Date.UTC(2014, 11, 2),
+                y: 0,
+            }, {
+                x: Date.UTC(2014, 11, 2),
+                x2: Date.UTC(2014, 11, 5),
+                y: 1
+            }, {
+                x: Date.UTC(2014, 11, 8),
+                x2: Date.UTC(2014, 11, 9),
+                y: 2
+            }, {
+                x: Date.UTC(2014, 11, 9),
+                x2: Date.UTC(2014, 11, 19),
+                y: 1
+            }, {
+                x: Date.UTC(2014, 11, 10),
+                x2: Date.UTC(2014, 11, 23),
+                y: 2
+            }],
+            dataLabels: {
+                enabled: true
+            }
+        }]
+
+    });
+
+  });
+
+</script>
+
