--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -61,9 +61,9 @@
                 x2: Date.UTC(2014, 11, 23),
                 y: 2
             }],
-            dataLabels: {
-                enabled: true
-            }
+            // dataLabels: {
+            //     enabled: true
+            // }
         }]
 
     });
