--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -18,6 +18,7 @@
     Highcharts.chart('testchart', {
       chart: {
         type: 'xrange',
+        // styledMode: true
       },
       title: {
         text: ''
