--- a/app/stylesheets/components/_charts.scss
+++ b/app/stylesheets/components/_charts.scss
@@ -1,10 +1,17 @@
 @import 'https://code.highcharts.com/css/highcharts.css';
 
-#testchart {
+#companychart {
     min-width: 300px;
     max-width: 800px;
     height: 300px;
     margin: 1em auto;
+}
+
+#adminchart {
+  min-width: 300px;
+  max-width: 800px;
+  height: 300px;
+  margin: 1em auto;
 }
 
 .highcharts-xrange-series .highcharts-point {
