--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,4 +1,7 @@
+<!-- il faudrait réussir à ne pas passer par ce lien mais par le fichier que j'ai créé -->
 <script src="https://code.highcharts.com/modules/xrange.js"></script>
+
+<!-- Voilà un script qui fonctionne s'ils nous demandent de rajouter le téléchargement des graphs -->
 <!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
 
 
@@ -7,13 +10,28 @@
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">TABLEAU DE BORD</h1>
       <h2 class="green-bg my-4">Production de déchets de fonctionnement</h2>
-      <div class="text-center">
-        <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary bold" %>
-      </div>
-      <div id='testchart' data-series="<%= @series.to_json %>"></div>
+
+      <!-- possibilité de saisir un relevé si on est référent mais pas admin -->
+      <% if current_user.referent? && !current_user.admin%>
+        <div class="text-center">
+          <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary bold" %>
+        </div>
+      <% end %>
+
+      <!-- graph reprenant tout seulement pour les admin -->
+      <% if current_user.admin %>
+        <h4 class="text-center bold">TOUTES LES STRUCTURES</h4>
+        <div id='adminchart' data-series="<%= @admin_series.to_json %>"></div>
+        <hr class="my-5">
+        <h4 class="text-center bold">STRUCTURE 1 (à rendre dynamique pour permettre de choisir la structure)</h4>
+      <% end %>
+
+      <!-- Ici s'affiche le graphique par entreprise, les données sont données via data-series -->
+      <div id='companychart' data-series="<%= @series.to_json %>"></div>
+
       <p>Récapitulatif</p>
       <% @days_and_weight_per_type_per_person.each do |type|  %>
-      <p> <%= type[0] %> : <%= type[2].round %> Kg par employé par jour en moyenne pour <%= type[1].to_i %> jours suivis </p>
+      <p> <%= type[0] %> : <%= (type[2] / type[1]).round %> Kg par employé par jour en moyenne pour <%= type[1].to_i %> jours suivis </p>
       <% end %>
       <b>Soit un total de <%= @total_weight.round %> Kg par employé depuis le début du défi</b>
     </div>
@@ -23,7 +41,8 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", function(event) {
-    Highcharts.chart('testchart', {
+    //graph par entreprise
+    Highcharts.chart('companychart', {
       chart: {
         type: 'xrange',
         // styledMode: true
@@ -39,8 +58,29 @@
           text: 'Kg / collaborateur·rice / jour moyen'
         }
       },
-      series: JSON.parse(document.getElementById("testchart").dataset.series)
+      series: JSON.parse(document.getElementById("companychart").dataset.series)
     });
+
+    //graph total pour les admin
+    Highcharts.chart('adminchart', {
+      chart: {
+        type: 'xrange',
+        // styledMode: true
+      },
+      title: {
+        text: ''
+      },
+      xAxis: {
+        type: 'datetime'
+      },
+      yAxis: {
+        title: {
+          text: 'Kg / collaborateur·rice / jour moyen'
+        }
+      },
+      series: JSON.parse(document.getElementById("adminchart").dataset.series)
+    });
+
   });
 </script>
 
