--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -68,8 +68,8 @@
         shared: true,
         useHTML: true,
         // headerFormat: '<small>{point.key}</small><table>',
-        pointFormat: '<tr><td style="color: {series.color}">{series.name}: </td>' +
-            '<td style="text-align: right"><b>{point.y} Kg/personne/jour</b></td></tr>',
+        pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b>: </td>' +
+            '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
         footerFormat: '</table>',
         valueDecimals: 2
     },
@@ -96,8 +96,9 @@
         shared: true,
         useHTML: true,
         // headerFormat: '<small>{point.key}</small><table>',
-        pointFormat: '<tr><td style="color: {series.color}">{series.name}: </td>' +
-            '<td style="text-align: right"><b>{point.y} Kg/personne/jour</b></td></tr>',
+        pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b> / </td>' +
+            '<tr><td style="text-align: right">{point.type} : </td></tr>' +
+            '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
         footerFormat: '</table>',
         valueDecimals: 2
       },
