modifié les dates comme demandé

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -18,13 +18,7 @@
           <h3>Calendrier :</h3>
           <ul class="list bullet-custom mb-0">
             <li>
-              <b>6 déc. 2018 - 10h-12h - <%= link_to "Athénée municipal de Bordeaux", "https://www.google.fr/maps/place/Ath%C3%A9n%C3%A9e+Municipal/@44.8408871,-0.5812093,14z/data=!4m5!3m4!1s0xd5527db54fa1269:0x927f5e7ea3fbca9!8m2!3d44.8398049!4d-0.577148?hl=fr", target: :blank, class:"cool-link"%> :</b> Réunion d’information pour les structures
-            </li>
-            <li>
-              <b>31 déc. 2018 :</b> Clôture des inscriptions
-            </li>
-            <li>
-              <b>9 jan. 2018 :</b> Annonce des 15 structures sélectionnées
+              <b>11 jan. 2019 :</b> Clôture des inscriptions
             </li>
             <li>
               <b>14 jan. 2019 - 09H30 :</b> Lancement du Défi Zéro Déchet des Pros (rencontre collective des structures participantes)
