--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -5,8 +5,8 @@
       <div class="carousel-caption">
         <div class="d-md-block">
           <%= link_to "/inscription", class:"btn btn-secondary text-white responsive-btn box" do %>
-          <h5><b>Inscrivez-vous</b></h5>
-          <p class="mb-0">jusqu'au 31 décembre 2018</p>
+          <h5><b>Inscription prolongées</b></h5>
+          <p class="mb-0">jusqu'au 11 janvier 2019</p>
           <% end %>
         </div>
       </div>
