--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
 
     <div class="row">
       <div class="col-10 offset-1">
-        <h2 class="green-bg-no-inline text-center mt-0 mb-5"><strong>Inscrivez-vous</strong> entre le 19 nov. et le 31 déc. !</h2>
+        <h2 class="green-bg-no-inline text-center mt-0 mb-5"><strong>Inscrivez-vous</strong> avant le 11 janvier 2019 !</h2>
       </div>
     </div>
 
