--- a/app/views/collects/new.html.erb
+++ b/app/views/collects/new.html.erb
@@ -4,13 +4,15 @@
       <h1 class="header text-primary pt-5 text-center">Faire un relevé</h1>
       <%= simple_form_for @collect do |f| %>
 
-        <%= f.input :bin_id, collection: @bins.map {|bin| [bin.bin_type.name, bin.id] } , label_method: :first, value_method: :last, label: "Choisir un bac" %>
-        <p>Période du relevé : début et fin</p>
+        <p><b>1.</b>Choisir un bac :</p>
+        <%= f.input :bin_id, collection: @bins.map {|bin| [bin.bin_type.name, bin.id] } , label_method: :first, value_method: :last, label: false %>
+        <p><b>2.</b>Relevé du : </p>
         <%= f.input :start_at, label: false %>
+        <p>au</p>
         <%= f.input :end_at, label: false %>
         <%= f.input :filled_rate, collection: [["0%", 0], ["25%", 25], ["50%", 50], ["75%", 75], ["100%", 100], ["125%", 125], ["150%", 150]], label_method: :first, value_method: :second, label: "Taux de remplissage du bac" %>
         <%= f.input :comment, label: "Commentaire" %>
-        <%= f.button :submit, "Enregistrer un relevé" %>
+        <%= f.button :submit, "Enregistrer", class: "btn btn-primary bold" %>
 
       <% end %>
     </div>
