stylisé qq formulaires

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="bg-white container viewport space-top mb-5">
-  <h1 class="mt-5 mb-4 header text-primary text-center">Créer un utilisateur</h1>
+  <h1 class="mt-5 mb-4 header text-primary text-center">Ajouter un·e collaborateur·rice</h1>
   <h3 class= "pt-3 mt-5"></h3>
   <%= simple_form_for @user do |f|%>
     <div class="row">
