--- a/app/views/bins/new.html.erb
+++ b/app/views/bins/new.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="container bg-white">
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">Gérer les bacs</h1>
 
@@ -20,12 +20,12 @@
         <% @bins.each do |bin| %>
         <tbody>
           <td><%= bin.bin_type.name  %></td>
-          <td><%= bin.shared %></td>
+          <td><%= bin.shared ? "Oui" : "Non" %></td>
           <td><%= bin.volume %>L</td>
           <td><%= bin.frequency_number %> <%= bin.frequency_periodicity %> <%= bin.frequency_day %> </td>
-          <td> <%= bin.collector %> </td>
+          <td> <%= bin.collector.capitalize %> </td>
           <td><% bin.trashes.each do |trash| %>
-             <%= trash.name %>,
+             <%= trash.name.capitalize %>,
           <% end %></td>
           <td> <%= bin.cost %>€ </td>
           <td><%= link_to "Modifier", edit_bin_path(bin), class: "btn btn-primary" %></td>
