--- a/app/views/comportamental_formulaires/page_three.html.erb
+++ b/app/views/comportamental_formulaires/page_three.html.erb
@@ -12,6 +12,7 @@
   <h2 class="mt-4 mb-4 green-bg">?</h2>
 
   <%= simple_form_for(@user_behaviour_diag, method: :put, url: wizard_path) do |f| %>
+      <p class="mt-4"><b>13. </b>Selon vous, par ordre de priorité, quelles sont les actions à mettre en place dans votre structure au niveau des déchets ? (rajouter des action)</p>
     <div id='priority-action'>
       <%= f.simple_fields_for :priority_actions do |priority_action| %>
         <%= render 'priority_action_fields', f: priority_action %>
