long commit for result form, just one pbl with other

--- a/app/views/comportamental_formulaires/page_four.html.erb
+++ b/app/views/comportamental_formulaires/page_four.html.erb
@@ -9,31 +9,28 @@
     <span class="blue"></span>
     <span class=""></span>
   </div>
-  <h2 class="mt-4 mb-4 green-bg">?</h2>
 
   <%= simple_form_for(@user_behaviour_diag, method: :put, url: wizard_path) do |f| %>
   <p class="mt-4"><b>14. </b>Au travail, pour quelle·s raison·s ne pratiquez-vous pas ou pas plus d’actions de tri ou réduction des déchets ?</p>
     <div class="form-group otherable">
-      <%= f.label :no_app_reason, class: "form-control-label select", label: "Choisir un champ" %>
       <%= f.collection_check_boxes :no_app_reason_ids, NoAppReason.all, :id, :name do |input| %>
         <label>
           <%= input.check_box %>
           <%= input.text %>
         </label>
       <% end %>
-      <%= f.input :other_label, wrapper_html: { class: "other-field "} %>
+      <%= f.input :other_label, wrapper_html: { class: "other-field "}, label: "Autre" %>
     </div>
 
-      <p class="mt-4"><b>15. </b>Au travail, pour quelle·s raison·s pratiquez-vous des actions liées aux déchets (tri, réduction…) ?</p>
+    <p class="mt-4"><b>15. </b>Au travail, pour quelle·s raison·s pratiquez-vous des actions liées aux déchets (tri, réduction…) ?</p>
     <div class="form-group otherable">
-      <%= f.label :no_app_reason, class: "form-control-label select", label: "Choisir un champ" %>
       <%= f.collection_check_boxes :app_reason_ids, AppReason.all, :id, :name do |o| %>
         <label>
           <%= o.check_box %>
           <%= o.text %>
         </label>
       <% end %>
-      <%= f.input :autre_label, wrapper_html: { class: "autre-field "} %>
+      <%= f.input :autre_label, wrapper_html: { class: "autre-field "}, label:"Autre" %>
     </div>
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
