--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -9,7 +9,7 @@
       <% if current_user.referent? && current_user.company.trash_diagnostic.nil? %>
         <p> <%= link_to "Diagnostic technique Structure", new_trash_diagnostic_path, class:"btn btn-primary bold" %></p>
       <% end %>
-    
+
       <% if current_user.user_behaviour_diag.nil? %>
         <%= link_to "Faire mon formulaire comportemental", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
       <% else %>
@@ -19,7 +19,7 @@
       <% if current_user.user_behaviour_result.nil? %>
         <%= link_to "Réaliser le formulaire - bilan comportemental", new_result_comportamental_formulaire_path, class:"btn btn-primary bold" %>
       <% else %>
-        <%= link_to "Voir le formulaire - Bilan comportemental", result_comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
+        <%= link_to "Voir le formulaire - Bilan comportemental", result_comportamental_formulaire_path(:start), class:"btn btn-primary bold" %>
       <% end %>
 
       <% if !current_user.company.trash_diagnostic.nil?  %>
