--- a/app/views/comportamental_formulaires/_priority_action_fields.html.erb
+++ b/app/views/comportamental_formulaires/_priority_action_fields.html.erb
@@ -1,5 +1,5 @@
 <div class='nested-fields'>
-    <%= f.input :priority_level %>
-    <%= f.input :action %>
-    <%= link_to_remove_association "remove task", f %>
+    <%= f.input :priority_level, label: "Numéro de priorité de l'action" %>
+    <%= f.input :action, label: "Description de l'action" %>
+    <%= link_to_remove_association "Supprimer l'action", f %>
 </div>
