--- a/app/views/comportamental_formulaires/page_five.html.erb
+++ b/app/views/comportamental_formulaires/page_five.html.erb
@@ -25,10 +25,10 @@
   <% end %>
 
   <p class="mt-4"><b>18. </b>Vous âge ?</p>
-  <%= f.input :age %>
+  <%= f.input :age, label: false %>
 
   <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure ??</p>
-  <%= f.input :seniority %>
+  <%= f.input :seniority, label: false %>
 
   <div class="d-flex justify-content-around mb-5 mt-4">
     <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
