change pbl text form and other bug OK Thank's NICOOOOOOOOOOOO

--- a/app/views/comportamental_formulaires/page_five.html.erb
+++ b/app/views/comportamental_formulaires/page_five.html.erb
@@ -24,10 +24,10 @@
     </label>
   <% end %>
 
-  <p class="mt-4"><b>18. </b>Vous âge ?</p>
+  <p class="mt-4"><b>18. </b>Votre âge ?</p>
   <%= f.input :age, label: false %>
 
-  <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure ??</p>
+  <p class="mt-4"><b>19. </b>Depuis combien d'années travaillez-vous dans votre structure ?</p>
   <%= f.input :seniority, label: false %>
 
   <div class="d-flex justify-content-around mb-5 mt-4">
